--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.4.3", default-features = false, features = [ "http1" ] }
+tokio = { version = "1.15.0", default-features = false, features = [ "macros", "rt-multi-thread"] }
