--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.4.3", default-features = false, features = [ "http1" ] }
 tokio = { version = "1.15.0", default-features = false, features = [ "macros", "rt-multi-thread"] }
+serde = { version = "1.0.132", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1.0.73", default-features = false, features = [ "std" ] }
