--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.4.3", default-features = false, features = [ "http1" ] }
-tokio = { version = "1.15.0", default-features = false, features = [ "macros", "rt-multi-thread"] }
-serde = { version = "1.0.132", default-features = false, features = [ "derive" ] }
-serde_json = { version = "1.0.73", default-features = false, features = [ "std" ] }
+axum = { version = "0.5.12", default-features = false, features = [ "http1", "query" ] }
+tokio = { version = "1.19.2", default-features = false, features = [ "macros", "rt-multi-thread"] }
+serde = { version = "1.0.139", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1.0.82", default-features = false, features = [ "std" ] }
