--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.5.12", default-features = false, features = [ "http1", "query" ] }
+hyper = { version = "0.14.20", default-features = false }
 tokio = { version = "1.19.2", default-features = false, features = [ "macros", "rt-multi-thread"] }
 serde = { version = "1.0.139", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.82", default-features = false, features = [ "std" ] }
