--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = { version = "0.5.12", default-features = false, features = [ "http1", "query" ] }
 hyper = { version = "0.14.20", default-features = false }
 tokio = { version = "1.19.2", default-features = false, features = [ "macros", "rt-multi-thread", "sync" ] }
+rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
 serde = { version = "1.0.139", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.82", default-features = false, features = [ "std" ] }
 
