--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.19.2", default-features = false, features = [ "macros", "
 rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
 serde = { version = "1.0.139", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.82", default-features = false, features = [ "std" ] }
+uuid = { version = "1.1.2", default-features = false, features = [ "std", "v4"] }
 
 [dev-dependencies]
 http = "0.2.8"
