--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.21.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
+tokio = { workspace = true }
+uuid = { workspace = true }
 
 [dev-dependencies]
-tokio = { version = "1.21.1", default-features = false, features = [ "test-util" ] }
+tokio = { workspace = true, features = [ "test-util" ] }
