--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -10,9 +10,9 @@ axum = { version = "0.5.12", default-features = false, features = [ "http1", "qu
 hyper = { version = "0.14.20", default-features = false }
 tokio = { workspace = true, features = [ "sync"] }
 rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
-serde = { version = "1.0.139", default-features = false, features = [ "derive" ] }
-serde_json = { version = "1.0.82", default-features = false, features = [ "std" ] }
-uuid = { workspace = true }
+serde.workspace = true
+serde_json.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 http = "0.2.8"
