--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 ]
 
 [workspace.dependencies]
+rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
 serde = { version = "1.0.145", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.85", default-features = false, features = [ "std" ] }
 tokio = { version = "1.21.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
