--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.5.12", default-features = false, features = [ "http1", "query" ] }
 hyper = { version = "0.14.20", default-features = false }
-tokio = { workspace = true, features = [ "sync"] }
-rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
+rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+tokio = { workspace = true, features = [ "sync"] }
 uuid.workspace = true
 
 [dev-dependencies]
