--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 ciborium = "0.2.0"
 rand.workspace = true
 serde.workspace = true
