--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 bincode = "1.3.3"
 ciborium = "0.2.0"
+ed25519-dalek = "1.0.1"
 rand.workspace = true
+rand_chacha = "0.2.2" 
 serde.workspace = true
 serde_json.workspace = true
 sha2 = { version = "0.10.6", default-features = false, features = [ "std" ] }
