--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.13.1"
+chrono = { version = "0.4.23", default-features = false, features = [ "clock" ] }
 ciborium = "0.2.0"
 ed25519-dalek = "1.0.1"
 rand.workspace = true
