--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 ]
 
 [workspace.dependencies]
+axum = { version = "0.6.1", default-features = false, features = [ "http1", "query" ] }
 rand = { version = "0.8.5", default-features = false, features = [ "std", "std_rng" ] }
 serde = { version = "1.0.145", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.85", default-features = false, features = [ "std" ] }
