--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.13.1"
 chrono = { version = "0.4.23", default-features = false, features = [ "clock" ] }
 ciborium = "0.2.0"
 ed25519-dalek = "1.0.1"
+futures = "0.3.25"
 rand.workspace = true
 rand_chacha = "0.2.2" 
 serde.workspace = true
