--- a/authentication/Cargo.toml
+++ b/authentication/Cargo.toml
@@ -23,3 +23,4 @@ uuid.workspace = true
 [dev-dependencies]
 hex-literal = "0.3.4"
 tokio = { workspace = true, features = [ "test-util" ] }
+tokio-tungstenite = "0.18.0"
